# text-editor-gtk

./: COPYING  README.md  com.example.TextEditor.json  meson.build
data/: com.example.TextEditor.desktop.in  com.example.TextEditor.gschema.xml  com.example.TextEditor.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  text-editor-gtk.gresource.xml  text-editor-gtk.in  window.py  window.ui
src/gtk/: help-overlay.ui
